--- a/tensorflow/tools/docker/notebooks/2_getting_started.ipynb
+++ b/tensorflow/tools/docker/notebooks/2_getting_started.ipynb
@@ -161,7 +161,7 @@
         "  yerror = tf.sub(yhat, target)\n",
         "  loss = tf.reduce_mean(tf.nn.l2_loss(yerror))\n",
         "  \n",
-        "  update_weights = tf.train.GradientDescentOptimizer(learning_rate).minimize(loss)\n",
+        "  update_weights = tf.train.GradientDescentOptimizer(learning_rate).minimize(test)\n",
         "  \n",
         "  for _ in range(training_steps):\n",
         "    # Repeatedly run the operations, updating the TensorFlow variable.\n",
